@@ -1,3 +1,7 @@
+2019-02-06
+
+- [optimization] target outputs are now extracted from a single parent output rather than multiple calls to "terraform output"
+
 2019-01-30
 
 - consul image version to 1.4.2
